Refactor V8EventListenerHelper for speed and simplicity.

This refactor simplifies the header and puts the work into a
the source file, where the bulk of the work is in a file-local
template (which primarily exists to factor out the listener creation
logic).

This sets up for a number of follow-up CLs, which combined with
this one give a 20% perf improvement on a microbenchmark of adding
and removing event listeners.

Bug: 752127
Change-Id: I3d5b8cea1560833b6ec867d9d35d44318b6db190
Reviewed-on: https://chromium-review.googlesource.com/599427
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Jeremy Roman <jbroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492011}
Former-commit-id: f7d575ed02a7ec6f9dc679b8bbc463fb7a6a47ad